--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,7 @@ theme: mini
 defaultContentLanguage: en
 
 # !!! exampleSite only, you may need to delete the line: `themesDir: ../../` 
-themesDir: ../../
+# themesDir: ../../
 
 hasCJKLanguage: true
 permalinks:
