--- a/config.yaml
+++ b/config.yaml
@@ -44,7 +44,7 @@ social:
 
 # Site parameters
 params:
-  # Site Author
+  # Site Author hui
   author: Author
   # Author biography
   bio: Software Engineer
